--- a/react-native-update/package.json
+++ b/react-native-update/package.json
@@ -12,6 +12,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-firebase": "^5.2.3",
+    "react-native-floating-labels": "^1.1.9",
     "react-navigation": "^3.6.0"
   },
   "devDependencies": {
